通话详单页面

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
+    <link rel="stylesheet" href="static/css/print-preview.css">
     <title>phone-project</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
 </html>
