--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
-    <title>phone-project</title>
+    <title>提钱游</title>
   </head>
   <body>
     <div id="app"></div>
